EKS/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: AWS_ECR_URI # CodeBuild에서 실제 이미지 URL로 치환
          ports:
            - containerPort: 80
          imagePullPolicy: Always # 항상 최신 이미지를 가져옴
