EKS/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: default
  labels:
    app: auth
    environment: production
    version: v1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      nodeSelector:
        role: backend
      containers:
      - name: auth
        image: 205930629963.dkr.ecr.ap-northeast-2.amazonaws.com/ticket101-ecr:auth-latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5002
