EKS/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-crawler # 서비스 이름
  labels:
    app: eks-crawler # 서비스와 관련된 레이블 (Deployment와 일치해야 함)
spec:
  ports:
    - name: "http"
      protocol: TCP
      port: 80         # 외부에서 접근하는 포트
      targetPort: 5007   # 컨테이너에서 노출하는 포트
  selector:
    app: eks-crawler      # Deployment의 selector와 일치해야 함
  type: LoadBalancer   # AWS ELB를 통해 외부 트래픽을 노출
