EKS/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crawler-ingress
  annotations:
    kubernetes.io/ingress.class: alb                           # ALB를 지정
    alb.ingress.kubernetes.io/scheme: internet-facing          # 외부 접근 가능
    alb.ingress.kubernetes.io/target-type: ip                 # Pod의 IP를 직접 대상으로 사용
spec:
  ingressClassName: alb
  rules:
    - host: crawler
      http:
        paths:
        - path: /
            pathType: Prefix
            backend:
              service:
                name: crawler-service
                port:
                  number: 80
